# otlp-data-analyzer

./: README.md  flake.nix  pyproject.toml
plans/: 00-project-structure.md  01-check-timestamp.md
src/otlp_analyzer/: __init__.py
src/otlp_analyzer/common/: __init__.py  otlp_parser.py  otlp_parser_test.py  timestamp_parser.py  timestamp_parser_test.py  utils.py  utils_test.py
src/otlp_analyzer/tools/: __init__.py  check_timestamp.py  check_timestamp_test.py
tests/data/: boundaries.jsonl  in_range.jsonl  missing_timestamp.jsonl  mixed.jsonl  nested.jsonl  too_early.jsonl  too_late.jsonl
