[project]
name = "otlp-analyzer"
version = "0.1.0"
description = "Collection of Python CLI tools to analyze JSONL files in the OTLP (OpenTelemetry Protocol) JSON format"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
otlp-check-timestamp = "otlp_analyzer.tools.check_timestamp:main"

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "mypy>=1.8.0",
    "pylint>=3.0.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]
